Update app name

--- a/App/index.html
+++ b/App/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>QuoteBot</title>
+    <title>Superapp</title>
     <script src="build/bundle.js" charset="utf-8"></script>
     <link rel="stylesheet" href="vendor/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
